--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,6 +21,18 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            custom_authenticator: App\Security\LoginFormAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                target: home
+            # Configuration du nombre maximum de tentatives de connexion échouées sur un temps donné
+            login_throttling:
+                max_attempts: 20
+                interval: '15 minutes'
+    role_hierarchy:
+      ROLE_ADMIN:   ROLE_MANAGER
+      ROLE_MANAGER: ROLE_USER
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
