implémentation de recaptcha et ckeditor

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,4 +1,7 @@
 twig:
+    globals:
+        site_name: "%app.site_name%"
+        google_recaptcha: '%env(GOOGLE_RECATCHA_SITE_KEY)%'
     form_themes: ['bootstrap_5_layout.html.twig']
     default_path: '%kernel.project_dir%/templates'
 
