--- a/.env
+++ b/.env
@@ -36,3 +36,7 @@ APP_SECRET=e04a312e6294ad1faf20b23470f84ee2
 # postgresql+advisory://db_user:db_password@localhost/db_name
 LOCK_DSN=semaphore
 ###< symfony/lock ###
+
+#clés google recaptcha
+GOOGLE_RECATCHA_SITE_KEY=6LeJb8YcAAAAANVGKb7toZ7SNLESGB2TOtUTl_l1
+GOOGLE_RECAPTCHA_PRIVATE_KEY=6LeJb8YcAAAAAD0Mb0CnC06KnfqNB1wn75ljb3Nl
