Ajout de menu modifié supprimé

--- a/config/packages/fos_ckeditor.yaml
+++ b/config/packages/fos_ckeditor.yaml
@@ -1,21 +1,56 @@
 # Read the documentation: https://symfony.com/doc/current/bundles/FOSCKEditorBundle/index.html
 
 twig:
-    form_themes:
-        - '@FOSCKEditor/Form/ckeditor_widget.html.twig'
+  form_themes:
+    - '@FOSCKEditor/Form/ckeditor_widget.html.twig'
 
 fos_ck_editor:
-    configs:
-        general:
-            language: fr
-            height: 400px
-            toolbar: [
-                    [
-                        'Bold',
-                        'Italic',
-                        'Strike',
-                        '-',
-                        'RemoveFormat'
-                    ]
+  configs:
+    general:
+      language: fr
+      height: 500px
+      toolbar: [
+        [
+            'Bold',
+            'Italic',
+            'Underline',
+            'Strike',
+            '-',
+            'RemoveFormat',
+            '-',
+            'Cut',
+            'Copy',
+            'Paste',
+            'PasteText',
+            'PasteFromWord',
+            '-',
+            'Undo',
+            'Redo',
+            '-',
+            'Styles',
+            'Font',
+            'FontSize',
+            'TextColor',
+            'BGColor'
+        ],
+        [
+            'NumberedList',
+            'BulletedList',
+            '-',
+            'Outdent',
+            'Indent',
+            '-',
+            'Blockquote',
+            '-',
+            'JustifyLeft',
+            'JustifyCenter',
+            'JustifyRight',
+            'JustifyBlock',
+            '-',
+            'Image',
+            'Table',
+            'HorizontalRule',
+            'SpecialChar'
+        ],
 
-            ]
+      ]
