--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,6 +7,7 @@ parameters:
     app.site_name: "Le Wake For Ever"
     app.nb_article_home: 5
     google_recaptcha.private_key: '%env(GOOGLE_RECAPTCHA_PRIVATE_KEY)%'
+    app.user.photo.directory: '%kernel.project_dir%/public/image/profils/'
 services:
     # default configuration for services in *this* file
     _defaults:
