--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@
 /public/image/profils/*
 !/public/image/profils/.gitignore
 ###
+###> liip/imagine-bundle ###
+/public/media/cache/
+###< liip/imagine-bundle ###
